# k8s-rbac-aggregator

./: .gitignore  README.md  pyproject.toml  sa_rbac_aggregator.py
